apps/lms/be/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-redis
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-redis
  template:
    metadata:
      labels:
        app: lms-redis
    spec:
      containers:
        - command:
            - sh
            - -c
            - redis-server --requirepass $REDIS_PASSWORD
          image: redis:8.10.1-alpine
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli -a $REDIS_PASSWORD ping | grep PONG
            initialDelaySeconds: 10
            periodSeconds: 15
          name: lms-redis
          ports:
            - containerPort: 6379
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - redis-cli -a $REDIS_PASSWORD ping | grep PONG
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /data
              name: redis-data
      volumes:
        - emptyDir: {}
          name: redis-data
