apps/lms/be/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-redis
  namespace: lms
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: lms-redis
