apps/lms/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-be
  namespace: lms
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: lms-be
