apps/lms/be/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lms-httproute
  namespace: lms
spec:
  hostnames:
    - lms.hridaya.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lms-be
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api
